Add Google Sheets integration with service account authentication
- Integrated service account authentication
- Added GoogleAuthManager and GoogleOAuth2 classes
- Updated SettingsView with authentication options
- Added document picker for service account JSON
- Configured automatic sync with Google Sheets
- Added security measures (.gitignore for credentials)
- Tested and verified integration works

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,7 @@ __pycache__/
 # Generated icons
 /AppIcon/
 /icon_*.png
+
+# Google Service Account (contains private key)
+GoogleServiceAccount.json
+/PTracker/GoogleServiceAccount.json
